[package]
name = "hiirc"
version = "0.5.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "High-level and featureful IRC client library with ease of use in mind."
documentation = "https://sbstp.github.io/hiirc/hiirc/"
keywords = ["irc", "client"]
homepage = "https://github.com/sbstp/hiirc"
repository = "https://github.com/sbstp/hiirc"
readme = "README.md"
license = "Zlib"
exclude = ["docs.sh"]

[dependencies]
encoding = "0.2.32"
loirc = "0.2"
